auto-test/tests/chapter_16/valid/libraries/return_char.c


char return_char(void) {
    return 5369233654l;  
}

signed char return_schar(void) {
    return 5369233654l;  
}

unsigned char return_uchar(void) {
    return 5369233654l;  
}