auto-test/tests/chapter_16/invalid_parse/extra_credit/string_literal_goto.c

int main(void) {
    goto "foo";
    return 0;
}